--- a/nagios_files/machine.cfg
+++ b/nagios_files/machine.cfg
@@ -6,9 +6,22 @@
 
 define host{
         use                     generic-host            ; Name of host template to use
-        host_name               Freedom
-        address                 192.168.1.35
+        host_name               FreeSys
+        address                 192.168.1.37
         }
+
+# Define a service to check the disk space of the root partition
+# on the local machine.  Warning if < 20% free, critical if
+# < 10% free space on partition.
+
+define service{
+        use                             generic-service         ; Name of service template to use
+        host_name                       FreeSys
+        service_description             Disk Space
+        check_command                   check_all_disks!20%!10%
+        }
+
+
 
 # Define a service to check the number of currently logged in
 # users on the local machine.  Warning if > 20 users, critical
@@ -16,7 +29,7 @@ define host{
 
 define service{
         use                             generic-service         ; Name of service template to use
-        host_name                       Freedom
+        host_name                       FreeSys
         service_description             Current Users
         check_command                   check_users!20!50
         }
@@ -28,7 +41,7 @@ define service{
 
 define service{
         use                             generic-service         ; Name of service template to use
-        host_name                       Freedom
+        host_name                       FreeSys
         service_description             Total Processes
 		check_command                   check_procs!250!400
         }
@@ -39,7 +52,7 @@ define service{
 
 define service{
         use                             generic-service         ; Name of service template to use
-        host_name                       Freedom
+        host_name                       FreeSys
         service_description             Current Load
 		check_command                   check_load!5.0!4.0!3.0!10.0!6.0!4.0
         }
