--- a/nagios_files/tablet.cfg
+++ b/nagios_files/tablet.cfg
@@ -6,8 +6,8 @@
 
 define host{
         use                     generic-host            ; Name of host template to use
-        host_name               Freedom
-        address                 192.168.1.35
+        host_name               Tablet
+        address                 192.168.1.40
         }
 
 # Define a service to check the number of currently logged in
@@ -16,7 +16,7 @@ define host{
 
 define service{
         use                             generic-service         ; Name of service template to use
-        host_name                       Freedom
+        host_name                       Tablet
         service_description             Current Users
         check_command                   check_users!20!50
         }
@@ -28,7 +28,7 @@ define service{
 
 define service{
         use                             generic-service         ; Name of service template to use
-        host_name                       Freedom
+        host_name                       Tablet
         service_description             Total Processes
 		check_command                   check_procs!250!400
         }
@@ -39,7 +39,7 @@ define service{
 
 define service{
         use                             generic-service         ; Name of service template to use
-        host_name                       Freedom
+        host_name                       Tablet
         service_description             Current Load
 		check_command                   check_load!5.0!4.0!3.0!10.0!6.0!4.0
         }
